<resources>
    <string name="app_name">SIAM-DTU</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="news_feed">News Feed</string>
    <string name="contact_us">Contact us</string>
    <string name="sponsors">Sponsors</string>
    <string name="contest">Contest</string>
    <string name="rate_us">Rate us</string>
    <string name="settings">Settings</string>
    <string name="action_signOut">Sign Out</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="facebook_app_id">365142517184587</string>

    <string name="siam_dtu">SIAM-DTU</string>
    <string name="close">close</string>
    <string name="events">Events</string>
    <string name="google_auth_key_parth">31749319442-59f04drmaapokrtqiglf8cjiql79sg8e.apps.googleusercontent.com</string>
    <string name="google_auth_key_2">668739284625-1p8odffpoemq2ajstsk0vuhb5jnki5mb.apps.googleusercontent.com</string>
    <string name="google_auth_key_siam">938483124503-3sgm9tfm4vjlkprnroomuqjm9akfo5of.apps.googleusercontent.com</string>
    <string name="image_of_event">image of event</string>
    <string name="question_already_attempted">Response Submitted</string>
    <string name="past_questions">Past Questions</string>
    <string name="is_alarm_set">Alarm Set</string>
    <string name="is_first_time">first time</string>
    <string name="simran_image">https://firebasestorage.googleapis.com/v0/b/siam-2k17-app.appspot.com/o/simran.jpg?alt=media&amp;token=fd7d43d8-e171-449c-a912-52effffabda6</string>
    <string name="shreya_image">https://firebasestorage.googleapis.com/v0/b/siam-2k17-app.appspot.com/o/shreya.jpg?alt=media&amp;token=38b253b1-d831-4874-80e4-515758daa9a6</string>
    <string name="pulkit_image">https://firebasestorage.googleapis.com/v0/b/siam-2k17-app.appspot.com/o/pulkit.jpg?alt=media&amp;token=2b1d7f38-e96b-43d0-8e48-652023dc9ca4</string>
    <string name="priyanshu_image">https://firebasestorage.googleapis.com/v0/b/siam-2k17-app.appspot.com/o/priyanshu.jpg?alt=media&amp;token=66b6a70f-8edb-44cf-83ca-a4bdbc3c0f4a</string>

    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sit amet libero velit. Curabitur urna erat, pharetra in condimentum vitae, mollis ac sem. Cras semper est dolor. Aliquam nec ullamcorper velit. Proin elementum neque nec cursus ultrices. Suspendisse sit amet condimentum neque. Cras semper nulla ac dapibus vestibulum. Etiam mi quam, dapibus sit amet ultrices id, finibus sit amet nulla. Nullam a laoreet ipsum, id posuere lorem. Ut et justo venenatis, egestas metus id, pellentesque ante. Pellentesque quis dui magna.

Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum ornare purus nec dapibus rhoncus. In in elit hendrerit, lobortis lacus pretium, rhoncus velit. Nam euismod vestibulum sapien, id facilisis lectus tempus fermentum. Sed bibendum risus quam, a interdum nisi euismod eu. Sed semper leo in odio sollicitudin sollicitudin. Suspendisse id arcu ut ligula maximus blandit. Sed congue nisl tellus, sit amet viverra risus mollis ac. Integer vitae risus ac libero pellentesque aliquam non non metus. Ut aliquet aliquam velit non aliquam. Sed a condimentum lacus. Maecenas nulla ligula, condimentum in metus sit amet, feugiat bibendum libero. Curabitur ut arcu lobortis quam efficitur tincidunt. Etiam sit amet bibendum nisl.

Cras aliquam leo et felis viverra semper. Proin quis nisi elit. Pellentesque iaculis sed neque eleifend egestas. Praesent efficitur mattis mattis. Praesent non mi vel dui facilisis rutrum id eget nulla. Duis vestibulum ut turpis ut blandit. Nam a urna sit amet dui tristique aliquet. Donec et augue mi. Vivamus luctus aliquet maximus.

Quisque at cursus ante. Integer iaculis odio quis vestibulum mattis. Proin sagittis nisi urna, sed semper enim fermentum ut. Praesent nec orci eros. Integer bibendum metus sed turpis suscipit, non facilisis orci ornare. Nunc placerat vehicula molestie. In efficitur urna elit, quis luctus ligula porta sit amet. Fusce vel iaculis magna, id fringilla risus. In rutrum lorem vitae maximus volutpat. Nam eu ex velit. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Aliquam eu ante sed ex varius faucibus. Fusce convallis ligula in odio varius commodo. Aenean maximus nisl quam, maximus tincidunt quam varius sed.

Etiam a lacus non turpis congue laoreet non eget urna. Etiam euismod neque enim, sed pellentesque dolor faucibus vitae. Morbi ut nisl nec nunc aliquam porttitor nec id libero. Nam eu lobortis ligula. Aenean nec risus sit amet libero tincidunt consectetur in eget ipsum. Donec molestie ligula non pretium molestie. Nullam sagittis elementum justo, eget maximus nisi feugiat ut.</string>
    <string name="no_upcoming_event">No Upcoming Event</string>
    <string name="credits">Credits:</string>
    <string name="general_question">Loading Questions&#8230;</string>
    <string name="no_internet_connection">No Internet Connection</string>
1

    <string name="event">EVENTS</string>
    <string name="contest_intro">CONTEST</string>
    <string name="winner">WINNERS</string>

    <string name="monthly">Monthly</string>
    <string name="weekly">Weekly</string>

    <string name="event_hint">Never miss an upcoming event \n stay updated.</string>
    <string name="contest_hint">Answer questions daily to win exciting prizes</string>
    <string name="winner_hint">Daily first 10 winners will get prize\n and weekly winners will get grand prize.\n Winners will be notified via mail next day.</string>
    <string name="skip">SKIP</string>
    <string name="not_active">Contest Not Available \nCome back later</string>


    <string name="rules">
1. One question will be posted everyday at 7pm till March 25.
\n\n2. POINTS AND wik CREDITS will be added in the accounts of the participants who answer correctly.
\n\n3. Be right and swift. The FIRST TWENTY CORRECT responses, get points on a rank based system. That is, the FIRST person to answer bags 30 points, SECOND: 29 points, THIRD: 28 points &#8230; TWENTIETH: 11 points.
\n\n4. All subsequent correct responses, gets 10 POINTS each.
\n\n5. NO NEGATIVE MARKING. 0 points, for an incorrect response.
\n\n6. Only one response will be recorded per participant per question.
\n\n7. The participants can answer a question until the next question is posted. That is, you get 24 hours to solve a question.
\n\n8. The result of the question of the day will be declared after the next question is posted.</string>
    <string name="rules_">Rules</string>
    <string name="leaderboard">Leaderboard</string>
</resources>
