<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_news_feed"
            android:icon="@drawable/facebook_box"
            android:title="@string/news_feed" />
        <item
            android:id="@+id/nav_contest"
            android:icon="@drawable/contest"
            android:title="@string/contest" />
        <item
            android:id="@+id/nav_sponsors"
            android:icon="@drawable/sponsors"
            android:title="@string/sponsors" />
        <item
            android:id="@+id/nav_contact_us"
            android:icon="@drawable/contact"
            android:title="@string/contact_us" />
        <item
            android:id="@+id/nav_events"
            android:icon="@drawable/events"
            android:title="@string/events" />

    </group>


</menu>
